{
    "name": "InputActions",
    "maps": [
        {
            "name": "ClassicMap",
            "id": "59b0b700-62f2-4637-afbb-c4013564c247",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "98b5e8bb-cfca-48a1-8e4b-2f54438b96c1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonRight",
                    "type": "Button",
                    "id": "eef8f92c-ff3c-40a2-bf9f-f2846af939a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonDown",
                    "type": "Button",
                    "id": "93931fe2-bfa0-4cc4-b825-5176ab2adb1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonLeft",
                    "type": "Button",
                    "id": "2cc80064-7fb6-4585-8afe-db93a3f96f10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonTop",
                    "type": "Button",
                    "id": "78aefa09-c470-43b1-8c0f-3358d08f4a05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "03fec3b9-642a-4c36-86fb-883bb5c1d863",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "ab7f4433-7c3f-4143-9816-a8ac25af59e3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "c6c13cdd-6c91-4d47-80e2-b6b97c5e64fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "902a2dce-63bd-434e-9e71-9dcc2df26835",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "81ff1e27-54f7-40d7-9e1b-d8ba5adbb2a4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fee844f0-eb62-4d79-a153-864fc27d1ffa",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a4fced96-d8fa-4d75-89f6-d10ea6779a51",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b51b7106-1fd7-4300-9c8a-e7b689132d91",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "451ef65a-2724-4952-be3c-bb722743070d",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b01d7f3-061f-4ea9-b41c-29b9f6125480",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cea32eb6-cafe-4913-b02c-9f2b0e1c7b35",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26ff7925-07fc-46f9-b60b-696426eebbc8",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "ButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d53eea5-3294-4baf-ab41-985be8c4489d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6291cd03-a430-4a31-ae45-d7379b3ed908",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "ButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58ebb6b7-ee7c-4358-a06b-fdbd6edbcbd4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31892302-461d-4f9d-9186-8463cc29a98d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "ButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f846267c-dc26-4f17-b2c0-77f33d9c77fb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ButtonTop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd5395bb-ba05-496f-98c7-8d2b8bd4beff",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "ButtonTop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "174c434c-21e5-452c-9f4b-07cc09f807c8",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "fc9c4d9c-a45c-41fc-a15f-00f9f52e9442",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4c44aefb-c6e6-4860-8af7-aa9493d9c85a",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3b2bba6d-44ff-40c4-b566-2e2a71d38d8f",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ddf49541-1051-460e-afe3-271c3c1c87cf",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bf67deab-381a-49a2-89a5-cbaff68be0bd",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b067900a-eb79-44ae-bf0b-7f0fb38b7d63",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d07932c-93e0-4e81-86e8-d22298fa606c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c9cfc26-ddd1-437f-b2e5-361eca8a4dd9",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "SwitchPro",
            "bindingGroup": "SwitchPro",
            "devices": [
                {
                    "devicePath": "<SwitchProControllerHID>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}